--- a/Client/CSS/todoapp.css
+++ b/Client/CSS/todoapp.css
@@ -10,7 +10,7 @@ body{
 	height: 100%;
 	width: 100%;
 	font-size:100%;
-	
+	overflow: hidden;
 }
 a{
 	text-decoration: none;
@@ -33,6 +33,8 @@ header {
 	position:fixed;
 	margin:0;
 	padding: 0px;
+	box-sizing: border-box;
+	overflow: hidden;
 }
 
 header > a{
@@ -97,28 +99,130 @@ div#menu{
 	position: fixed;
 	top:5%;
 	height: 95%;
-	width: 25%;
-	right:-25%;
+	width: 300px;
+	right:-300px;
+
 	background-color: white;
 }
 
 #menuContent{
+	position: relative;
 	width:100%;
 	position:relative;
-	top:10%;
-	margin:auto;	
-	border-spacing: 0px 50px;
+	top:5%;
+	height: 95%;
+	margin:auto;
+	font-family: "Fredoka One";
+	text-align: center;
 }
 
-#menuContent tr td{
-	text-align:center;
+#menuContent div {
+	width: 100%;
 }
+
+#menuContent #colors{
+	margin-top:30px;
+}
+
+#menuContent #colors p{
+	width: 100%;
+}
+
+#menuContent #colors table{
+	min-width: 150px;
+	height: 100px;
+	background-color: grey;
+	margin:auto;
+	border-collapse: collapse;
+}
+
+
+#menuContent #colors table td:hover{
+	cursor: pointer;
+}
+
 
 #menuContent img{
 	display: block;
 	margin:auto;
 	width:80%;
 }
+
+div#logOutButton {
+	position: absolute;
+	color:white;
+	background-color: brown;
+	bottom: 0px;
+	padding: 5px;
+}
+
+div#logOutButton:hover {
+	background-color: red;
+	cursor: pointer;
+}
+
+div#addTodoDiv {
+	position: relative;
+	padding: 1vmin;
+	width: 100%;
+	height: 10%;
+	z-index: 4;
+	background-color: white;
+	border-top:0.2vmin dashed grey;
+	display: block;
+	text-align: center;
+	box-sizing: border-box;
+}
+
+input {
+	font-family: "Ubuntu";
+	font-size: 0.8em;
+    padding: 0.5vmin;
+    margin: 0 0.3vmin 0 0.3vmin;
+    box-sizing: border-box;
+    max-height: 100%;
+}
+
+input[type="text"] {
+	border:none;
+	border-bottom: 0.2vmin solid grey;
+	width: 50%;
+}
+
+input[type="date"] {
+	width: 20%;
+}
+
+input[type="text"]:hover{
+	transition: 0.2s;
+	border-bottom:0.2vmin solid black;
+}  
+
+input[type="text"]:focus{
+	transition: 0.2s;
+	outline:none;
+}
+
+button {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+    padding: 0.8vmin;
+    margin: 1vmin;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2vmin;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #555555;
+    color: white;
+}
+
 /* LEFT SIDE */
 div#left {
 	position: fixed;
@@ -128,33 +232,32 @@ div#left {
 	height: 95%;
 	bottom:0px;
 	z-index: 4;
+	box-sizing: border-box;
 }
 
 div#left ul{
 	width:100%;
 	position:relative;
 	top:20%;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	margin:auto;
 	overflow: hidden;
 }
 
 div#left ul li{
 	list-style-type: none;
-	margin-bottom:20px;
+	margin-bottom:30px;
 	display: inline-block;
 	width: 100%;
 	height: 74px;
 	font-family: "Ubuntu";
 	border-left: 0px solid rgba(0,0,0,0);
-	transition:0.5s;
+	transition:0.3s;
 }
 
 div#left ul li:hover{
-	border-left: 10px solid rgb(0, 51, 102);
-	color:rgb(0, 51, 102);
 	cursor:pointer;
-	transition: 0.5s;
+	transition: 0.3s;
 }
 
 div#left ul li div{
@@ -162,6 +265,7 @@ div#left ul li div{
 	 height: 100%;
 	 float:left;
 	 margin-left:8%;
+	 width: 55%;
 }
 
 div#left ul li div p{
@@ -172,76 +276,40 @@ div#left ul li div p{
 	transform: translateY(-50%);
 }
 
+div#left div#copyright {
+	margin-bottom: 1vmin;
+	font-family: "Ubuntu";
+	color:grey;
+	position: absolute;
+	bottom:0px;
+	width: 100%;
+	text-align: center;
+}
+
 .active{
 	background-color: rgba(0,0,0,0.3);
 }
 
 .iconsLeft{
 	float:left;
-	max-height:64px;
-	max-width: 64px;
+	width: 20%;
+	max-height: 100%;
+	object-fit: contain;
+	position:relative;
+	top:50%;
+	transform: translateY(-50%);
 	margin:5px 3px 5px 10px;
 	
 }
 /* RIGHT SIDE */
 
-div#tabs {
-	z-index:3;
-	position:absolute;
-	top:5%;
-	height:5%;
-	
-	left:25%;
-	width:75%;
-	background-color: #e8e8e8;
-	font-family: "Ubuntu";
-}
-
-div#tabs ul{
-	height: 100%;
-	width:100%;
-	overflow: hidden;	
-}
-
-div#tabs ul li{
-	cursor: pointer;
-	width:30%;
-	text-align: center;
-	overflow: hidden; 
-	display:inline-block;	
-	height: 100%;
-	background-color: #e8e8e8;
-	border-left: 2px solid #b7b7b7;
-	list-style-type: none;
-	margin-right: -4px;
-	border-bottom:  2px solid #b7b7b7;	
-}
-
-div#tabs ul li.active{
-	border-bottom: 2px solid black; 
-	background-color: white;
-}
-
-div#tabs ul li#plus{
-	width:9%;
-}
-
-li .container{
-    margin: 0;
-    padding:5px 10px 5px 10px;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-}
-
 #mainPageContainer{
+	box-sizing: border-box;
 	background-color:white;
 	z-index:2;
 	position:absolute;
 	right:0px;
-	min-height:90%;
+	height:90%;
 	width:75%;
 	top:10%; 
 	/*box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.5);*/
@@ -249,33 +317,77 @@ li .container{
 }
 
 #mainPageContainer #content{
+	overflow: auto;
+	box-sizing: border-box;
 	position:relative;
 	padding:10px;
-	top:20px;
 	width:90%;
+	height: 90%;
 	margin:auto;
 	font-family: "Fredoka One";
 }
 
-#todoList p{
-	margin:5px;
+#todoList {
+	font-family: "Ubuntu";
+	margin-top:15px;
+}
+
+#todoList > div{
 	padding:5px;
-	border-radius: 2px;
+	width: 100%;
+	position: relative;
+	box-sizing: border-box;
+	overflow:hidden;
 }
 
-#todoList p button{
-	margin-left:3px;
-	float:right;
+#todoList > div:hover {
+	background-color: lightgrey;
 }
 
-#todoList p input{
-	float:left;
-	margin-right: 3px;
-}
-#todoList p:nth-child(even){
-	background-color: #cdcdcd;
-}
-#todoList p:nth-child(odd){
-	background-color: #5299e0;
+#todoList > div div {
+	position: relative;
+	width: calc(100% - 30px);
+	display: inline-block;
+	overflow:hidden;
+	font-size: 26px;
 }
 
+#cross {
+	object-fit: contain;
+	position: relative;
+	width: 26px;
+}
+
+#cross:hover {
+	cursor:pointer;
+}
+
+#bluec:hover {
+	border-left: 10px solid rgb(0, 51, 102);
+	color:rgb(0, 51, 102);
+}
+
+#redc:hover {
+	border-left: 10px solid rgb(153, 0, 0);
+	color:rgb(153, 0, 0);
+}
+
+#orangec:hover {
+	border-left: 10px solid rgb(255, 102, 0);
+	color:rgb(255, 102, 0);
+}
+
+#yellowc:hover {
+	border-left: 10px solid rgb(230, 184, 0);
+	color:rgb(230, 184, 0);
+}
+
+#greenc:hover {
+	border-left: 10px solid rgb(36, 143, 36);
+	color:rgb(36, 143, 36);
+}
+
+#purplec:hover {
+	border-left: 10px solid rgb(71, 0, 179);
+	color:rgb(71, 0, 179);
+}
