--- a/Client/CSS/faq.css
+++ b/Client/CSS/faq.css
@@ -1,14 +1,74 @@
-/* MAIN */
+*{
+	margin:0; 
+	padding:0;
+}
+html{
+	height: 100%;
+	width: 100%;
+}
+body{
+	height: 100%;
+	width: 100%;
+	font-size:100%;
+	
+}
+a{
+	text-decoration: none;
+	color:inherit;
+	display: inherit;
+	position: inherit;
+	float:inherit;
+}
+
+body {
+	background-image: url("../Resources/bk2.jpg");
+	background-repeat: no-repeat;
+	background-attachment: fixed ;
+	background-size: cover;
+}
+
+/* HEADER */
+header {
+	color:white;
+	height: 8%;
+	width:100%;
+	background-color: rgba(0,0,0,0.6);
+	z-index: 3;
+	position:fixed;
+	margin:0;
+	padding: 0px;
+	z-index: 3;
+}
+
+#logo{
+	opacity: 1;
+	height: 100%;
+	float:left;
+	height:80%;
+	margin-left:5px;
+	position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+img#logo {
+	cursor:pointer;
+}
+
+main {
+	position: relative;
+	top:15%;
+}
 
 main #contentFAQ{
 	position: relative;
 	top:15%;
 	margin:auto;
-	width:50%;
+	width:80%;
 	background-color: #c0c0c0;
 	padding:30px;
 	min-height:300px;
-	border-radius: 5px;
+	z-index: 2;
 }
 
 h2 {
@@ -17,7 +77,7 @@ h2 {
 }
 
 p.question {
-	font-family: "Fredoka One";
+	font-family: "Ubuntu";
 	font-size:1.8em;
 	color:black;
 	text-shadow: none;
@@ -25,8 +85,23 @@ p.question {
 
 p.answer {
 	font-style: italic;
-	font-family: "Fredoka One";
+	font-family: "Ubuntu";
 	font-size:1.8em;
 	color:black;
 	text-shadow: none;
+}
+
+/* FOOTER */
+footer{
+	position:fixed;
+	margin:0;
+	width:100%;
+	height:4%;
+	bottom:0px;
+	text-align: right;
+	padding-right: 2vmin;
+	box-sizing: border-box;
+	font-size: 3vmin;
+	color:rgba(0,0,0,0.7);
+	z-index: 1;
 }
