--- a/Client/CSS/index.css
+++ b/Client/CSS/index.css
@@ -24,7 +24,7 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed ;
 	background-size: cover;
-	overflow: hidden;
+	overflow: auto;
 }
 
 /* HEADER */
@@ -197,7 +197,7 @@ span {
 
 div#login {
 	cursor: pointer;
-	margin-top:10px;
+	margin-top:5px;
 	background-color: lightgrey;
 	padding: 5px 10px 5px 10px;
 	text-align: center;
@@ -222,9 +222,16 @@ input:focus{
 	outline:none;
 }
 
+div#errorMessage {
+	font-size: 10px;
+	height: 12px;
+	font-family: "Ubuntu";
+	color:white;
+}
+
 /* FOOTER */
 footer{
-	position:absolute;
+	position:fixed;
 	margin:0;
 	width:100%;
 	height:4%;
